github-cicd/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-activity
spec:
  type: ClusterIP
  ports:
    - name: dccn-user-activity-grpc-port
      port: 50051
      protocol: TCP
      targetPort: 50051
    - name: dccn-user-activity-rest-port
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: user-activity
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-activity-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-activity
  template:
    metadata:
      annotations:
        mydate: replacehere
      labels:
        app: user-activity
      name: user-activity
    spec:
      containers:
        - name: user-activity
          imagePullPolicy: Always
          image: ankrnetwork/user-activity:latest
          command:
            - ./entrypoint.sh
          args:
            - ./user-activity
          resources:
            requests:
              memory: "32Mi"
              cpu: "200m"
            limits:
              memory: "32Mi"
              cpu: "200m"
          ports:
            - containerPort: 50051
              name: grpc-port
              protocol: TCP
            - containerPort: 80
              name: rest-port
              protocol: TCP
